adding logic to handle datamodels in bulk upload
